--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -24,13 +24,10 @@ dubbo.protocol.accesslog=dubbo-access.log
 dubbo.protocol.buffer=102400
 dubbo.monitor.protocol=register
 dubbo.consumer.check=false
-dubbo.consumer.timeout=3000
+dubbo.consumer.timeout=8000
+dubbo.provider.timeout=8000
 dubbo.scan.base-packages=com.fire.es.service
 
 swagger.enabled=true
 swagger.basePackage=com.fire.es.controller
 swagger.title=es_swagger
-
-task.fire.indices=fire-syslog
-task.fire.cron=0/10 * * * * ?
-task.fire.size=100
