--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -24,7 +24,8 @@ dubbo.protocol.accesslog=dubbo-access.log
 dubbo.protocol.buffer=102400
 dubbo.monitor.protocol=register
 dubbo.consumer.check=false
-dubbo.consumer.timeout=3000
+dubbo.consumer.timeout=8000
+dubbo.provider.timeout=8000
 dubbo.scan.base-packages=com.fire.es.service
 
 swagger.enabled=true
